# Image-Webcam-Manipulation

./: CMakeLists.txt  ImageManipulation.cpp  README.md
